[package]
name = "sattelite-servers"
version = "0.1.0"
license = "Apache-2.0"
edition = "2018"

[features]
test-bpf = []

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.6.2"
thiserror = "1.0"
uint = "0.8"
arbitrary = { version = "0.4", features = ["derive"], optional = true }
borsh = "0.8.2"

[dev-dependencies]
solana-program-test = "1.6.2"
solana-sdk = "1.6.2"
async-trait = "0.1.48"

[lib]
crate-type = ["cdylib", "lib"]
